[package]
name = "daumdic"
version = "0.6.1"
authors = ["pbzweihander <sd852456@naver.com>"]
description = "Daum Dictionary API wrapper"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/daumdic/"
repository = "https://github.com/pbzweihander/daumdic-rs"
readme = "README.md"
edition = "2018"

[dependencies]
failure = "0.1.4"
scraper = "0.9.0"
lazy_static = "1.2.0"
futures = "0.1.25"
reqwest = "0.9.5"

[dev-dependencies]
tokio = "0.1.13"
