[package]
name = "daumdic"
version = "0.7.0"
authors = ["pbzweihander <sd852456@naver.com>", "Hyeon Kim <simnalamburt@gmail.com>"]
description = "Daum Dictionary API wrapper"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/daumdic/"
repository = "https://github.com/pbzweihander/daumdic-rs"
readme = "README.md"
edition = "2018"

[dependencies]
failure = "0.1.8"
scraper = "0.12.0"
reqwest = "0.11.6"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
